# vidi

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
examples/: Cargo.toml  README.md
examples/compression/: Cargo.toml
examples/compression/src/: main.rs
examples/cors/: Cargo.toml
examples/cors/src/: main.rs
examples/csrf/: Cargo.toml
examples/csrf/src/: main.rs
examples/databases/: README.md
examples/databases/sea-orm/: Cargo.toml  README.md
examples/databases/sea-orm/public/: index.html
examples/databases/sea-orm/src/: api.rs  db.rs  lib.rs  main.rs
examples/forms/form/: Cargo.toml
examples/forms/form/src/: main.rs
examples/forms/multipart/: Cargo.toml
examples/forms/multipart/src/: main.rs
examples/graceful-shutdown/: Cargo.toml
examples/graceful-shutdown/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/htmlx/: Cargo.toml
examples/htmlx/src/: main.rs
examples/htmlx/templates/: index.html  todos.html
examples/leptos/: Cargo.toml
examples/leptos/src/: main.rs
examples/limits/: Cargo.toml
examples/limits/src/: main.rs
examples/otel/metrics/: Cargo.toml
examples/otel/metrics/src/: main.rs
examples/otel/tracing/: Cargo.toml
examples/otel/tracing/src/: main.rs
examples/routing/openapi/: Cargo.toml
examples/routing/openapi/src/: main.rs
examples/routing/todos/: Cargo.toml
examples/routing/todos/src/: main.rs
examples/rustls/: Cargo.toml
examples/rustls/src/: main.rs
examples/session/: Cargo.toml
examples/session/src/: main.rs
examples/smol/: Cargo.toml
examples/smol/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/static-files/embed/: Cargo.toml  README.md
examples/static-files/embed/public/: index.html
examples/static-files/embed/src/: main.rs
examples/static-files/include-dir/: Cargo.toml
examples/static-files/include-dir/html/: index.html
examples/static-files/include-dir/src/: main.rs
examples/static-files/serve/: Cargo.toml
examples/static-files/serve/src/: main.rs
examples/static-routes/: Cargo.toml
examples/static-routes/src/: main.rs
examples/templates/: README.md
examples/templates/askama/: Cargo.toml
examples/templates/askama/src/: main.rs
examples/templates/leptos/: Cargo.toml
examples/templates/markup/: Cargo.toml
examples/templates/markup/src/: main.rs
examples/templates/maud/: Cargo.toml
examples/templates/maud/src/: main.rs
examples/templates/minijinja/: Cargo.toml
examples/templates/minijinja/src/: main.rs
examples/templates/minijinja/templates/: index.html
examples/templates/rinja/: Cargo.toml
examples/templates/rinja/src/: main.rs
examples/templates/rinja/templates/: index.html  layout.html
examples/templates/tera/: Cargo.toml
examples/templates/tera/src/: main.rs
examples/tower/: Cargo.toml
examples/tower/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
examples/unix-socket/: Cargo.toml
examples/unix-socket/src/: main.rs
examples/websocket-chat/: Cargo.toml
examples/websocket-chat/src/: main.rs
vidi/: Cargo.toml  README.md
vidi-macros/: Cargo.toml  README.md
vidi-macros/src/: lib.rs
vidi-macros/tests/: handler.rs
vidi-router/: Cargo.toml  README.md
vidi-router/src/: lib.rs  macros.rs  resources.rs  route.rs  router.rs  tree.rs
vidi-smol/: Cargo.toml  README.md
vidi-smol/src/: lib.rs  responder.rs
vidi-test/: Cargo.toml  README.md
vidi-test/src/: lib.rs
vidi-test/tests/: body.rs  payload.rs  request.rs  response.rs
vidi-tower/: Cargo.toml  README.md
vidi-tower/src/: layer.rs  lib.rs  middleware.rs  service.rs
vidi/src/: lib.rs  responder.rs  server.rs
vidi/src/server/: tcp.rs  tls.rs
vidi/src/server/tls/: native_tls.rs
viz/: Cargo.toml  README.md
viz-core/: Cargo.toml  README.md
viz-core/src/: body.rs  error.rs  from_request.rs  handler.rs  into_response.rs  io.rs  lib.rs  macros.rs  request.rs  response.rs
viz-core/src/handler/: after.rs  and_then.rs  around.rs  before.rs  boxed.rs  catch_error.rs  catch_unwind.rs  cloneable.rs  either.rs  fn_ext.rs  fn_ext_hanlder.rs  into_handler.rs  map.rs  map_err.rs  map_into_response.rs  mod.rs  or_else.rs  service.rs  transform.rs  try_handler.rs
viz-core/src/middleware/: compression.rs  cookie.rs  cors.rs  csrf.rs  helper.rs  limits.rs  mod.rs
viz-core/src/middleware/otel/: metrics.rs  mod.rs  tracing.rs
viz-core/src/middleware/session/: config.rs
viz-core/src/types/: cookie.rs  data.rs  form.rs  header.rs  json.rs  limits.rs  mod.rs  multipart.rs  params.rs  payload.rs  query.rs  realip.rs  route.rs  session.rs  sse.rs  state.rs  websocket.rs
viz-core/src/types/params/: de.rs  mod.rs
viz-core/src/types/sse/: event.rs  mod.rs
viz-core/src/types/websocket/: error.rs  mod.rs
viz-core/tests/: body.rs  error.rs  from_request.rs  handler.rs  into_response.rs  request.rs  response.rs  type_json.rs  type_realip.rs
viz-core/tests/ui/: handler.rs
viz-handlers/: Cargo.toml  README.md
viz-handlers/src/: embed.rs  lib.rs  prometheus.rs  serve.rs
viz-handlers/src/embed/: mod.rs
viz-handlers/src/prometheus/: mod.rs
viz-handlers/src/serve/: directory.rs  error.rs  mod.rs
viz-macros/: Cargo.toml
viz-macros/src/: lib.rs
viz-macros/tests/: handler.rs
viz-middleware/: Cargo.toml
viz-router/: Cargo.toml
viz-router/src/: lib.rs  resources.rs  route.rs  router.rs  tree.rs
viz-smol/: Cargo.toml
viz-smol/src/: lib.rs  listener.rs  server.rs
viz-smol/src/server/: tcp.rs  unix.rs
viz-test/: Cargo.toml  README.md
viz-test/src/: lib.rs
viz-test/tests/: body.rs  payload.rs  request.rs  response.rs
viz-tower/: Cargo.toml  README.md
viz-tower/src/: layer.rs  lib.rs  middleware.rs  service.rs
viz/src/: lib.rs  responder.rs  serve.rs  server.rs  tls.rs
viz/src/server/: accept.rs  listener.rs  mod.rs  responder.rs  service.rs  smol.rs  tcp.rs  tls.rs  tokio.rs  unix.rs
viz/src/server/smol/: tcp.rs
viz/src/server/tls/: listener.rs  mod.rs  native_tls.rs  (+2 more)
viz/src/tls/: listener.rs  mod.rs  native_tls.rs  rustls.rs
(+76 files in other folders)
