[workspace]
resolver = "2"
members = [
  "viz",
  "viz-core",
  "viz-handlers",
  "viz-macros",
  "viz-router",
  "viz-tower",
  "viz-test",

  "examples/hello-world",
  "examples/unix-socket",
  "examples/static-files/embed",
  "examples/static-files/serve",
  "examples/static-files/include-dir",
  "examples/limits",
  "examples/forms/form",
  "examples/forms/multipart",
  "examples/websocket-chat",
  "examples/sse",
  "examples/session",
  "examples/csrf",
  "examples/cors",
  "examples/rustls",
  # "examples/static-routes",
  "examples/routing/todos",
  "examples/routing/openapi",
  "examples/otel/*",
  "examples/compression",
  "examples/templates/*",
  "examples/tracing",
  "examples/graceful-shutdown",
  "examples/databases/*",
  "examples/htmlx",
  "examples/tower",
]

[workspace.package]
version = "0.7.1"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
homepage = "https://viz.rs"
documentation = "https://docs.rs/viz"
repository = "https://github.com/viz-rs/viz"
license = "MIT"
rust-version = "1.63"                           # follows `tokio` and `hyper`

[workspace.dependencies]
viz = { version = "0.7.1", path = "viz" }
viz-core = { version = "0.7.1", path = "viz-core" }
viz-router = { version = "0.7.1", path = "viz-router" }
viz-handlers = { version = "0.7.1", path = "viz-handlers", default-features = false }
viz-macros = { version = "0.2.0", path = "viz-macros" }
viz-test = { version = "0.2.0", path = "viz-test" }
viz-tower = { version = "0.1.0", path = "viz-tower" }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
sync_wrapper = "0.1.2"
thiserror = "1.0"

# router
path-tree = "0.7.3"

# http
headers = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["server"] }
hyper-util = { version = "0.1.2", features = ["server-auto", "tokio"] }
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.3"

hex = "0.4"
rust-embed = "8"

futures-util = "0.3"
rustls-pemfile = "1.0"
tokio = { version = "1.35", features = ["net"] }
tokio-native-tls = "0.3"
tokio-rustls = "0.24"
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
tokio-util = "0.7"

# OpenTelemetry
opentelemetry = { version = "0.21", default-features = false }
opentelemetry_sdk = { version = "0.21", default-features = false }
opentelemetry-prometheus = { version = "0.14", features = [
  "prometheus-encoding",
] }
opentelemetry-semantic-conventions = { version = "0.13" }
prometheus = "0.13"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tower
tower = "0.4"
tower-http = "0.5"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = false

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
non_ascii_idents = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
needless_pass_by_value = "warn"
module_name_repetitions = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
