[workspace]
members = [
  "hello-world",
  "unix-socket",
  "serve",
  "forms/form",
  "forms/multipart",
  "websocket-chat",
  "sse",
  "session",
  "csrf",
  "cors",
  "rustls",
  "static-routes",
  "routing/todos",
]
exclude = ["tls", "target"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
debug = false
panic = "abort"
incremental = false
overflow-checks = false
