[workspace]
members = [
  "hello-world",
  "unix-socket",
  "static-files/embed",
  "static-files/serve",
  "forms/form",
  "forms/multipart",
  "websocket-chat",
  "sse",
  "session",
  "csrf",
  "cors",
  "rustls",
  "static-routes",
  "routing/todos",
  "otel/*",
]
exclude = ["tls", "target"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
debug = false
panic = "abort"
incremental = false
overflow-checks = false
