[package]
name = "vidi-macros"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/vidi-macros"
description = "The proc macros for Vidi"
keywords = ["async", "http", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
vidi-core.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
