[package]
name = "vidi-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/vidi-router"
description = "The router for Vidi"
keywords = ["async", "framework", "http", "web", "router"]
categories = ["asynchronous", "network-programming", "web-programming"]
publish = true

[features]
default = []

[dependencies]
vidi-core.workspace = true
path-tree.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
serde_derive.workspace = true

hyper.workspace = true
http-body-util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
