[package]
name = "vidi-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/vidi-test"
description = "The core traits and types in for Vidi"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[dependencies]
vidi = { workspace = true, features = ["fs"] }

bytes.workspace = true
futures-util.workspace = true
headers.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
mime.workspace = true
serde.workspace = true
sessions = { workspace = true, features = ["memory"] }
tokio = { workspace = true, features = ["full"] }

nano-id = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "multipart"] }
