[package]
name = "vidi-tower"
version = "0.4.0"
documentation = "https://docs.rs/vidi-tower"
description = "An adapter for tower service"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vidi-core.workspace = true
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tower-http = { workspace = true, features = ["limit", "request-id", "timeout"] }

[lints]
workspace = true
