[package]
name = "viz-core"
version = "0.4.5"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
homepage = "https://viz.rs"
repository = "https://github.com/viz-rs/viz"
documentation = "https://docs.rs/viz"
description = "The core traits and types in for the Viz"

[features]
default = [
  "state",
  "limits",
  "params",
  "json",
  "form",
  "query",
  "multipart",
  "websocket",
  "cookie",
  "session",
]

state = []
limits = []

params = ["dep:serde"]
json = ["dep:serde", "dep:serde_json"]
form = ["dep:serde", "dep:serde_urlencoded"]
query = ["dep:serde", "dep:serde_urlencoded"]
multipart = ["dep:form-data"]
websocket = ["dep:tokio-tungstenite", "tokio/rt"]
sse = ["dep:tokio-stream", "tokio/time"]

cookie = ["dep:cookie"]
cookie-private = ["cookie", "cookie?/private"]
cookie-signed = ["cookie", "cookie?/signed"]

session = ["cookie", "json", "dep:sessions-core"]

csrf = ["cookie", "dep:base64", "dep:getrandom"]
cors = []

compression = ["tokio-util/io", "dep:async-compression"]

otel = ["dep:opentelemetry", "dep:opentelemetry-semantic-conventions"]
otel-tracing = ["otel", "opentelemetry?/trace"]
otel-metrics = ["otel", "opentelemetry?/metrics"]

[dependencies]
async-trait = "0.1.64"
bytes = "1.4"
dyn-clone = "1.0.8"
futures-util = "0.3.26"
headers = "0.3.8"
http = "0.2.7"
http-body = "0.4.5"
hyper = { version = "0.14", features = ["stream"] }
mime = "0.3.16"
thiserror = "1.0.35"

rfc7239 = "0.1.0" # realip
cookie = { version = "0.17.0", features = ["percent-encode"], optional = true }
form-data = { version = "0.4.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
sessions-core = { version = "0.3.4", optional = true }

# CSRF
getrandom = { version = "0.2.8", optional = true }
base64 = { version = "0.13.0", optional = true }

# Compression
async-compression = { version = "0.3.15", features = ["tokio", "gzip", "brotli", "deflate"], optional = true }

# OpenTelemetry
opentelemetry = { version = "0.18.0", default-features = false, optional = true }
opentelemetry-semantic-conventions = { version = "0.10.0", optional = true }

tokio = { version = "1.25", optional = true }
tokio-tungstenite = { version = "0.18", optional = true }
tokio-stream = { version = "0.1.11", optional = true }
tokio-util = { version = "0.7.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
