[package]
name = "viz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-core"
description = "The core traits and types in for Viz"
keywords = ["async", "framework", "http", "service", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = [
  "state",
  "limits",
  "params",
  "json",
  "form",
  "query",
  "multipart",
  "websocket",
  "cookie",
  "session",
]

state = []
limits = []

params = ["dep:serde"]
json = ["dep:serde", "dep:serde_json"]
form = ["dep:serde", "dep:serde_urlencoded"]
query = ["dep:serde", "dep:serde_urlencoded"]
multipart = ["dep:form-data"]
websocket = ["dep:tokio-tungstenite", "tokio/rt"]
sse = ["dep:tokio-stream", "tokio/time"]

cookie = ["dep:cookie"]
cookie-private = ["cookie", "cookie?/private"]
cookie-signed = ["cookie", "cookie?/signed"]

session = ["cookie-private", "json", "dep:sessions-core"]

csrf = ["cookie-private", "dep:base64", "dep:getrandom"]
cors = []

compression = ["tokio-util/io", "dep:async-compression"]

otel = ["dep:opentelemetry", "dep:opentelemetry-semantic-conventions"]
otel-tracing = ["otel", "opentelemetry?/trace"]
otel-metrics = ["otel", "opentelemetry?/metrics"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dyn-clone.workspace = true
futures-util.workspace = true
headers.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

hyper.workspace = true

mime.workspace = true
thiserror.workspace = true

rfc7239 = "0.1.0"                                                               # realip
cookie = { version = "0.17.0", features = ["percent-encode"], optional = true }
form-data = { version = "0.5.0-rc.2", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }
sessions-core = { version = "0.4.0", optional = true }

# CSRF
getrandom = { version = "0.2.9", optional = true }
base64 = { version = "0.21.2", optional = true }

# Compression
async-compression = { version = "0.4.0", features = [
  "tokio",
  "gzip",
  "brotli",
  "deflate",
], optional = true }

# OpenTelemetry
opentelemetry = { workspace = true, default-features = false, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
pin-project-lite.workspace = true

[dev-dependencies]
viz = { workspace = true, features = ["session"] }
viz-test.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
