[package]
name = "viz-handlers"
version = "0.4.12"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"
repository = "https://github.com/viz-rs/viz"
documentation = "https://docs.rs/viz-handlers"
description = "Viz handlers"

[features]
default = ["serve"]

serve = [
  "dep:mime_guess",
  "dep:percent-encoding",
  "dep:tokio-stream",
  "tokio-util/io",
  "tokio/fs",
  "tokio/io-util",
]

embed = ["dep:hex", "dep:mime_guess", "dep:rust-embed"]

prometheus = ["opentelemetry/metrics", "dep:opentelemetry-prometheus"]

[dependencies]
viz-core = { path = "../viz-core", version = '0.4.12' }

# required!
thiserror = "1.0"

# serve & embed
mime_guess = { version = "2.0", optional = true }

# serve
percent-encoding = { version = "2.3.0", optional = true }
tokio = { version = "1.29", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tokio-util = { version = "0.7.8", optional = true }

# embed
hex = { version = "0.4", optional = true }
rust-embed = { version = "6.6.1", features = ["compression"], optional = true }

# OpenTelemetry
opentelemetry = { version = "0.20.0", default-features = false, optional = true }
opentelemetry-prometheus = { version = "0.13.0",  features = ["prometheus-encoding"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
