[package]
name = "viz-handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-handlers"
description = "The handlers for Viz"
keywords = ["async", "http", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = ["serve"]

serve = [
  "dep:mime_guess",
  "dep:http-body",
  "dep:percent-encoding",
  "dep:tokio-stream",
  "tokio-util/io",
  "tokio/fs",
  "tokio/io-util",
]

embed = ["dep:hex", "dep:mime_guess", "dep:http-body-util", "dep:rust-embed"]

prometheus = [
  "dep:http-body-util",
  "opentelemetry/metrics",
  "dep:opentelemetry-prometheus",
  "dep:prometheus"
]

[dependencies]
viz-core.workspace = true

# required!
thiserror.workspace = true

# serve & embed
mime_guess = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

# serve
percent-encoding = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

# embed
hex = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }

# OpenTelemetry
opentelemetry = { workspace = true, default-features = false, optional = true }
opentelemetry-prometheus = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
