[package]
name = "viz-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"
repository = "https://github.com/viz-rs/viz"
documentation = "https://docs.rs/viz-macros"
description = "Viz proc macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing"] }

[dev-dependencies]
viz = { path = "../viz" }

anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
