[package]
name = "viz-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-macros"
description = "The proc macros for Viz"
keywords = ["async", "http", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing"] }

[dev-dependencies]
viz = { path = "../viz" }

anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
