[package]
name = "viz-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-macros"
description = "The proc macros for Viz"
keywords = ["async", "http", "web"]
categories = ["asynchronous", "network-programming", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
viz.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
