[package]
name = "viz-middleware"
version = "0.1.2"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "Viz Middleware"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["logger", "recover", "timeout", "request-nanoid", "jwt"]

logger = []
recover = ["pin-project-lite"]
timeout = ["tokio/time"]

request-nanoid = ["nano-id"]
request-uuid = ["uuid/v4"]

auth = []
auth-basic = []
auth-bearer = []

cookies = []
cors = []

compression = [
  "bytes",
  "pin-project-lite",
  "tokio-util/io",
  "async-compression/tokio",
]
compression-gzip = ["async-compression/gzip"]
compression-brotli = ["async-compression/brotli"]
compression-deflate = ["async-compression/deflate"]

jwt = ["jsonwebtoken"]
jwt-header = []
jwt-query = []
jwt-param = []
jwt-cookie = []

sessions-memory = ["sessions/memory"]
sessions-redis = ["sessions/redis"]

full = [
  "logger",
  "recover",
  "request-nanoid",
  "timeout",
  "auth",
  "cookies",
  "cors",

  "compression",
  "compression-brotli",

  "jwt",
  "jwt-header",
]

[dependencies]
viz-core = { path = "../viz-core", version = "0.1.2" }
viz-utils = { path = "../viz-utils", version = "0.1.2" }

serde = "1.0"

# request-id
nano-id = { version = "0.2", optional = true }
uuid = { version = "1.0", default-features = false, features = ["v4"], optional = true }

# sessions
sessions = { version = "0.2.3", optional = true }

tokio = { version = "1.13", features = ["time"], optional = true }
tokio-util = { version = "0.6", features = ["io"], optional = true }

# compression
async-compression = { version = "0.3", features = ["tokio"], optional = true }
bytes = { version = "1.1", optional = true }
pin-project-lite = { version = "0.2.7", optional = true }

# jwt
jsonwebtoken = { version = "7.2", optional = true }
cfg-if = "1.0"
