[package]
name = "viz-router"
version = "0.3.1"
edition = "2021"
rust-version = "1.61"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"
repository = "https://github.com/viz-rs/viz"
documentation = "https://docs.rs/viz-router"
description = "Viz Router"
publish = true

[features]
default = []

[dependencies]
viz-core = { path = "../viz-core", version = "0.3.1" }
path-tree = "0.4"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
bytes = "1.0"
hyper = "0.14.20"
serde_derive = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
