[package]
name = "viz-router"
version = "0.4.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/viz-router"
description = "The router for Viz"
keywords = ["async", "framework", "http", "web", "router"]
categories = ["asynchronous", "network-programming", "web-programming"]
publish = true

[features]
default = []

[dependencies]
viz-core = { path = "../viz-core", version = "0.4.3" }
path-tree.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
serde_derive.workspace = true

hyper.workspace = true 
http-body-util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
