[package]
name = "viz-router"
version = "0.4.8"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
homepage = "https://viz.rs"
repository = "https://github.com/viz-rs/viz"
documentation = "https://docs.rs/viz-router"
description = "Viz Router"

[features]
default = []

[dependencies]
viz-core = { path = "../viz-core", version = "0.4.8" }
path-tree = { version = "0.7" }
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
bytes = "1.4"
hyper = "0.14"
serde_derive = "1.0"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
