[package]
name = "viz-smol"
version = "0.1.0"
documentation = "https://docs.rs/viz-smol"
description = "An adapter for smol runtime"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = [
  "state",
  "limits",
  "query",
  "form",
  "json",
  "multipart",
  "params",
  "cookie",
  "session",

  "http1",
]

state = ["viz-core/state"]
limits = ["viz-core/limits"]

query = ["viz-core/query"]
form = ["viz-core/form"]
json = ["viz-core/json"]
multipart = ["viz-core/multipart"]
params = ["viz-core/params"]

cookie = ["viz-core/cookie"]
cookie-private = ["viz-core/cookie-private"]
cookie-signed = ["viz-core/cookie-signed"]

session = ["cookie", "cookie-private", "viz-core/session"]

csrf = ["cookie", "cookie-private", "viz-core/csrf"]
cors = ["viz-core/cors"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

unix-socket = []

macros = ["dep:viz-macros"]

handlers = ["dep:viz-handlers"]

otel = ["viz-core/otel"]
otel-tracing = ["otel", "viz-core/otel-tracing"]
otel-metrics = ["otel", "viz-core/otel-metrics"]
otel-prometheus = ["handlers", "viz-handlers?/prometheus"]

[dependencies]
viz-core.workspace = true
viz-router.workspace = true
viz-handlers = { workspace = true, optional = true }
viz-macros = { workspace = true, optional = true }

hyper.workspace = true
hyper-util.workspace = true
tracing.workspace = true

async-executor.workspace = true
async-net.workspace = true
smol-hyper.workspace = true
futures-lite.workspace = true

[lints]
workspace = true
